added static ingredients

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Recipe Generator</string>
+
+    <!--    generate recipe screen strings-->
+    <string name="choose_your_ingredients">Choose your Ingredients</string>
+    <string name="vegetables">Vegetables</string>
+    <string name="spices">Spices</string>
+    <string name="cooking_oil">Cooking Oil</string>
+    <string name="dairy_products">Dairy Products</string>
 </resources>
