--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="home_header">Not sure what to cook in %s?</string>
     <string name="recipe_from_your_ingredients">We\'ll create recipes based on ingredients you have. You can also tell us what you\'re in the mood for.</string>
     <string name="get_started">Get Started</string>
+
+    <string name="no_recipe_found">Oops! Looks like there are no recipes available right now</string>
 </resources>
