--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="get_started">Get Started</string>
 
     <string name="no_recipe_found">Oops! Looks like there are no recipes available right now</string>
+
+    <!--  recipe detail screen strings  -->
+    <string name="ingredients">Ingredients</string>
+    <string name="instructions">Instructions</string>
+    <string name="tips">Tips</string>
+    <string name="variations">Variations</string>
 </resources>
