--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="instructions">Instructions</string>
     <string name="tips">Tips</string>
     <string name="variations">Variations</string>
+    <string name="save_recipe">Save Recipe</string>
 </resources>
