--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="tips">Tips</string>
     <string name="variations">Variations</string>
     <string name="save_recipe">Save Recipe</string>
+    <string name="history">History</string>
+    <string name="show_all">Show All</string>
 </resources>
