--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="save_recipe">Save Recipe</string>
     <string name="history">History</string>
     <string name="show_all">Show All</string>
+
+    <!--recipe list screen-->
+    <string name="all_recipes">All Recipes</string>
 </resources>
