integrated saved recipe screen in the bottom nav bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
 
     <!--recipe list screen-->
     <string name="all_recipes">All Recipes</string>
+
+    <!--saved recipe screen-->
+    <string name="saved_recipes">Saved Recipes</string>
 </resources>
